<resources>
    <string name="app_name">Pasalubong Hub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="action_notifications">Notifications</string>
    <string name="item_1">Latest</string>
    <string name="item_2">Sweets</string>
    <string name="item_3">Goods</string>
    <string name="item_4">Clothing</string>
    <string name="item_5">Books \u0026 More</string>
    <string name="item_6">More</string>
    <string name="item_shop_1">Dahsboard</string>
    <string name="item_shop_2">Product Management</string>
    <string name="item_shop_3">Order Management</string>
    <string name="item_shop_4">Notification</string>
    <string name="item_shop_5">Messages</string>
    <string name="item_shop_6">Account Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>
    <string name="help_support">Help \u0026 Support</string>
    <string name="contact_us">About</string>
    <string name="terms_conditions">Terms \u0026 Conditions</string>
    <string name="help_center">Help Center</string>
    <string name="search_hint">Search for Products, Brands and More</string>
    <string name="default_notification_channel_id" translatable="false">default_notification_channel_id</string>
    <string name="default_notification_channel_name" translatable="true">default_notification_channel_name</string>
    <string name="data_type_chat_message">data_type_chat_message</string>
    <string name="data_type_admin_broadcast">data_type_admin_broadcast</string>
    <string name="data_title">title</string>
    <string name="data_type">data_type</string>
    <string name="data_message">message</string>
    <string name="data_chatroom_id">chatroom_id</string>
    <string name="reply_label">intent_data_payload</string>
    <string name="label">new message...</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GO HOME</string>
    <string name="slide_1_title">Welcome</string>
    <string name="slide_1_desc">Enter your description here..
    </string>
    <string name="slide_2_title">Welcome</string>
    <string name="slide_2_desc">Enter your description here..</string>
    <string name="slide_3_title">Hello</string>
    <string name="slide_3_desc">Enter your description here..</string>
    <string name="slide_4_title">Hello</string>
    <string name="slide_4_desc">Enter your description here.</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome
        slider -> clear data
    </string>
    <string name="play_again">Once Again</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_confirm_password">Password does not match</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_out">Sign Out</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="registration_text">Dont have an account? Register</string>
    <string name="resend_email_verification">Resend Email Verification</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_navigation">Map Navigation</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages">Messages</string>
    <string name="title_products">Shop Products</string>
    <string name="no_business_text">Sell on\nPasalubong Hub</string>
    <string name="has_business_text">Go to your\nPasalubong Hub</string>
    <string name="add_product">Add Product</string>
    <string name="fcm_message">Pasalubong Hub</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="firebase_messaging_server_key">No Data</string>
    <string name="firebase_messaging_leacy_server_key">No Data</string>
    <string name="firebase_user_node">USERS</string>
    <string name="firebase_business_node">BUSINESS</string>
    <string name="firebase_product_node">PRODUCTS</string>
    <string name="firebase_data_type_admin_broadcast">data_type_admin_broadcast</string>
    <string name="firebase_data_type_chat_broadcast">data_type_chat_broadcast</string>
    <string name="firebase_data_type_order_product_broadcast">data_type_order_product_broadcast</string>
    <string name="chat_room_collection">chatrooms</string>
    <string name="chat_room_id">chatroom_id</string>
    <string name="field_chat_room_id">chatroom_id</string>
    <string name="field_chat_room_name">chatroom_name</string>
    <string name="field_chat_room_creator_id">creator_id</string>
    <string name="field_chat_room_security_level">security_level</string>
    <string name="field_chat_room_users">users</string>
    <string name="field_chat_room_messages">chatroom_messages</string>
    <string name="field_chat_room_last_seen_message">last_message_seen</string>
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_order_reference">order_reference</string>
    <string name="peso_sign">₱</string>
    <string name="db_root_users">users</string>
    <string name="db_root_customers">customers</string>
    <string name="db_root_publish_product">publish_product</string>
    <string name="db_root_products">products</string>
    <string name="db_root_ratings">ratings</string>
    <string name="db_root_sales">sales</string>
    <string name="db_root_server">server</string>
    <string name="db_shop_field_display_name">display_name</string>
    <string name="db_shop_field_location">location</string>
    <string name="db_shop_field_lat">lat</string>
    <string name="db_shop_field_long">long</string>
    <string name="db_shop_field_email">email</string>
    <string name="db_shop_field_owner">owner_id</string>
    <string name="db_customer_field_display_name">display_name</string>
    <string name="db_customer_field_name">name</string>
    <string name="db_customer_field_email">email</string>
    <string name="db_customer_field_messaging_token">messaging_token</string>
    <string name="db_customer_field_photo_url">photo_url</string>
    <string name="db_customer_field_id">user_id</string>
    <string name="db_product_field_name">name</string>
    <string name="db_product_field_description">description</string>
    <string name="db_product_field_category">category</string>
    <string name="db_product_field_brand">brand</string>
    <string name="db_product_field_price">price</string>
    <string name="db_product_field_stocks">stocks</string>
    <string name="db_product_field_variation">variation</string>
    <string name="db_product_field_whole_sale">whole_sale</string>
    <string name="db_product_field_shop_id">shop_id</string>
    <string name="db_product_field_product_status">product_status</string>
    <string name="db_product_field_product_reference">product_reference</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions." </string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="tabian_consulting_logo">Pasalubon Hub Consulting Logo</string>
    <string name="email_registration">Email Registration</string>
    <string name="employee_dashboard">Employee Dashboard</string>
    <string name="this_week_s_initiatives">This week\'s initiatives</string>
    <string name="employee_schedule">Employee Schedule</string>
    <string name="company_culture">Company Culture</string>
    <string name="tabian_consulting_sales_chart">Pasalubong Hub Consulting Sales Chart</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="reset_password">Reset Password</string>
    <string name="account_settings">Account Settings</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="first_and_last_name">First and last name</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="primary_phone_contact">Primary phone contact #</string>
    <string name="chat">Chat</string>
    <string name="issues">Issues</string>
    <string name="intent_data_payload">intent_data_payload</string>
    <string name="intent_message">intent_data_payload</string>
    <string name="intent_project">intent_project</string>
    <string name="intent_attachments">intent_attachments</string>
    <string name="intent_project_id">intent_project_id</string>
    <string name="intent_issue_id">intent_issue_id</string>
    <string name="intent_snackbar_message">intent_snackbar_message</string>
    <string name="intent_issue">intent_issue</string>
    <string name="intent_image">intent_image</string>
    <string name="dialog_change_photo">ChangePhotoDialog</string>
    <string name="dialog_new_chatroom">NewChatroomDialog</string>
    <string name="dialog_delete_chatroom">DeleteChatroomDialog</string>
    <string name="dialog_add_department">AddDepartmentDialog</string>
    <string name="dbnode_users">users</string>
    <string name="dbnode_chatrooms">chatrooms</string>
    <string name="dbnode_departments">departments</string>
    <string name="dbnode_server">server</string>
    <string name="field_chatroom_name">chatroom_name</string>
    <string name="field_creator_id">creator_id</string>
    <string name="field_security_level">security_level</string>
    <string name="field_email">email</string>
    <string name="field_name">name</string>
    <string name="field_phone">phone</string>
    <string name="field_profile_image">profile_image</string>
    <string name="field_user_id">user_id</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_category">Product Category</string>
    <string name="price">Price</string>
    <string name="stock">Stock</string>
    <string name="whole_sale">Whole Sale</string>
    <string name="shop_name">My Shop</string>
</resources>