<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item1"
            android:title="@string/item_1" />
        <item
            android:id="@+id/nav_item2"
            android:title="@string/item_2" />
        <item
            android:id="@+id/nav_item3"
            android:title="@string/item_3" />
        <item
            android:id="@+id/nav_item4"
            android:title="@string/item_4" />
        <item
            android:id="@+id/nav_item5"
            android:title="@string/item_5" />
        <item
            android:id="@+id/nav_item6"
            android:title="@string/item_6" />

        <item
            android:id="@+id/map"
            android:title="@string/map_navigation" />

    </group>
    <item android:title="@string/my_profile">
        <menu>
            <item
                android:id="@+id/my_orders"
                android:title="@string/my_orders" />
            <item
                android:id="@+id/my_cart"
                android:title="@string/my_cart" />
            <item
                android:id="@+id/my_wishlist"
                android:title="@string/my_wishlist" />
            <!--            <item-->
            <!--                android:id="@+id/my_rewards"-->
            <!--                android:icon="@drawable/ic_card_giftcard_black_24dp"-->
            <!--                android:title="@string/my_rewards" />-->
            <item
                android:id="@+id/my_account"
                android:title="@string/my_account" />

            <item
                android:id="@+id/logout"
                android:title="@string/sign_out" />
        </menu>
    </item>

    <item android:title="@string/help_support">
        <menu>
            <item
                android:id="@+id/contact_us"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/terms_conditions"
                android:title="@string/terms_conditions" />
            <item
                android:id="@+id/help_center"
                android:title="@string/help_center" />
        </menu>
    </item>

</menu>
