<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_product"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/title_products" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/messages" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/iconpas"
        android:title="@string/shop_name" />

</menu>
